--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    // Apply the JaCoCo plugin
     id 'jacoco'
 }
 
@@ -12,6 +13,7 @@ repositories {
     mavenCentral()
 }
 
+
 dependencies {
     testCompile(
             'org.junit.jupiter:junit-jupiter-api:5.4.0',
@@ -23,6 +25,9 @@ dependencies {
     testCompile group: 'org.mockito', name: 'mockito-junit-jupiter', version: '3.3.3'
     testCompile group: 'org.mockito', name: 'mockito-junit-jupiter', version: '3.3.3'
     testCompile group: 'org.mockito', name: 'mockito-core', version: '2.1.0'
+    testCompile group: 'org.easymock', name: 'easymock', version: '4.2'
+    compile group: 'org.jongo', name: 'jongo', version: '1.4.1'
+    compile group: 'org.mongodb', name: 'mongo-java-driver', version: '3.12.2'
     implementation 'com.google.guava:guava:28.1-jre'
 
     testRuntime(
